--- a/app/views/email_setups/edit.html.erb
+++ b/app/views/email_setups/edit.html.erb
@@ -1,6 +1,1 @@
-<h2>Editing Email Setup</h2>
-
-<%= render 'form', email_setup: @email_setup %>
-
-<%# link_to 'Show', @client %>
-<%# link_to 'Back', clients_path %>
+<%= render 'form', favorite_setup: @email_setup, page_title: "Редактировать"  %>
