--- a/app/views/email_setups/new.html.erb
+++ b/app/views/email_setups/new.html.erb
@@ -1,5 +1,5 @@
-<h2>New Email Setup</h2>
 
-<%= render 'form', email_setup: @email_setup %>
+<%= render 'form', favorite_setup: @email_setup, page_title: "Создать"  %>
+
 
 <%# link_to 'Back', clients_path %>
