--- a/app/views/insints/new.html.erb
+++ b/app/views/insints/new.html.erb
@@ -1,4 +1,2 @@
+<%= render 'form', favorite_setup: @insint, page_title: "Создать"  %>
 
-<h1>Создать интеграцию</h1>
-
-<%= render 'form', insint: @insint %>
