--- a/app/views/invoices/edit.html.erb
+++ b/app/views/invoices/edit.html.erb
@@ -1,6 +1,4 @@
-<h1>Редактировать счет</h1>
 
-<%= render 'form', invoice: @invoice %>
+<%= render 'form', favorite_setup: @invoice, page_title: "Редактировать"  %>
 
-<%# link_to 'Show', @invoice %> 
-<%# link_to 'Back', invoices_path %>
+
