--- a/app/views/invoices/new.html.erb
+++ b/app/views/invoices/new.html.erb
@@ -1,5 +1,2 @@
-<h1>Новый Счет</h1>
+<%= render 'form', favorite_setup: @invoice, page_title: "Создать"  %>
 
-<%= render 'form', invoice: @invoice %>
-
-<%# link_to 'Back', invoices_path %>
