--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -5,7 +5,11 @@
 
   <div class="row">
     <div class="col-6">
-      <%= f.input :custom_status, label: "Статус", collection: Services::InsalesApi.new(current_user.insints.first).statuses, prompt: "Статус", input_html: { class: "form-select" } %>
+      <% if Insint.current.present_work? %>
+      <%= f.input :custom_status, label: "Статус", collection: Services::InsalesApi.new(Insint.current).statuses, prompt: "Статус", input_html: { class: "form-select" } %>
+      <% else %>
+      <%= f.input :custom_status, label: "Статус", placeholder: "Статус",disabled: true, input_html: { class: "form-control" }, hint: 'Не настроена интеграция Insales' %>
+      <% end %>
       <%= f.input :financial_status, label: "Фин Статус", collection: Event::FIN_STATUS, prompt: "Фин Статус", input_html: { class: "form-select" } %>
       <%= f.fields_for :event_actions do |ff| %>
         <%= render "event_actions/form_items", f: ff %>
