--- a/app/views/insints/edit.html.erb
+++ b/app/views/insints/edit.html.erb
@@ -1,3 +1,3 @@
-<h1>Редактировать интеграцию</h1>
 
-<%= render 'form', insint: @insint %>
+<%= render 'form', favorite_setup: @insint, page_title: "Редактировать"  %>
+
