--- a/app/views/invoices/_form.html.erb
+++ b/app/views/invoices/_form.html.erb
@@ -1,6 +1,9 @@
 
 <%= simple_form_for(@invoice) do |f| %>
-
+  <%= f.error_notification %>
+  <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
+  <div class="row mt-3">
+    <div class="col-12 h4"><%= page_title %></div>
     <div class="payplan-wrapper mt-5">
       <%= f.input :payertype, as: :radio_buttons, 
                               collection: [['fiz', 'Физ лицо'], ['ur', 'Юр лицо']],
@@ -33,7 +36,7 @@
                                 wrapper: :horizontal_collection,
                                 wrapper_html: {class: 'mt-4'} %>
     </div>
-
+    </div>
 
   <div class="btn-group mt-5">
     <%= f.button :submit, 'Сохранить', class: 'btn btn-success'  %>
