--- a/app/views/templates/_form.html.erb
+++ b/app/views/templates/_form.html.erb
@@ -29,7 +29,8 @@
     <% end %>
      </div>
     <div class="col-6">
-      <% if !@template.new_record?%>
+    <% if Insint.current.present_work?%>
+      <% if !@template.new_record? %>
         <%= form_with url: preview_templates_path, method: :get, class: "input-group", local: false do |form| %>
           <%= form.select :insales_order_id, @ten_orders, include_blank: "Выберите заказ", class: "form-select" %>
           <%= button_tag(type: 'submit', class: "btn btn-outline-secondary") do %>Предпросмотр<% end %>
@@ -39,7 +40,10 @@
         </div>
       <% else %>
       Сохраните шаблон и появится Предпросмотр
-      <% end %>  
+      <% end %> 
+      <%else%>
+      Не настроена интеграция Insales. Предпросмотр не работает
+      <% end %>
     </div>
     </div>
   </div>
