update check ins integration

--- a/app/views/message_setups/_form.html.erb
+++ b/app/views/message_setups/_form.html.erb
@@ -8,7 +8,7 @@
     <div class="col-12 h6">Cервис: <%= MessageSetup::TITLE %></div>
     <div class="col-12 h6">Описание: <%= MessageSetup::DESCRIPTION %></div>
     <div class="col-9">
-    <% if Insint.current.present_work? %>
+    <% if Insint.present_work? %>
       <%= f.input :status, label: "Статус (вкл/выкл)", wrapper: :horizontal_collection, wrapper_html: {class: 'mt-4'}  %>
       <%= f.input :title, as: :hidden, input_html: { value: MessageSetup::TITLE } %>
       <%= f.input :handle, as: :hidden, input_html: { value: MessageSetup::HANDLE }  %>
