--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -5,7 +5,7 @@
 
   <div class="row">
     <div class="col-6">
-      <% if Insint.current.present_work? %>
+      <% if Insint.present_work? %>
       <%= f.input :custom_status, label: "Статус", collection: Services::InsalesApi.new(Insint.current).statuses, prompt: "Статус", input_html: { class: "form-select" } %>
       <% else %>
       <%= f.input :custom_status, label: "Статус", placeholder: "Статус",disabled: true, input_html: { class: "form-control" }, hint: 'Не настроена интеграция Insales' %>
