--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -15,7 +15,7 @@
     </div>
     <%= search_form_for @search, {class: 'form-inline col-10 pl-0 pr-0'} do |f| %>
       <div class="input-group input-group-sm">
-              <% if Insint.current.present_work? %>
+              <% if Insint.present_work? %>
               <%= f.select :custom_status_eq, Services::InsalesApi.new(Insint.current).statuses, {include_blank: false, prompt: 'Статус'}, class: "form-select", style: "max-width: 180px;" %>
               <% else %>
               <%= f.search_field :custom_status_eq , placeholder: 'Статус', class: "form-control", style: "max-width: 180px;" %>
