--- a/app/views/favorite_setups/_form.html.erb
+++ b/app/views/favorite_setups/_form.html.erb
@@ -8,7 +8,7 @@
     <div class="col-12 h6">Cервис: <%= FavoriteSetup::TITLE %></div>
     <div class="col-12 h6">Описание: <%= FavoriteSetup::DESCRIPTION %></div>
     <div class="col-9">
-    <% if Insint.current.present_work? %>
+    <% if Insint.present_work? %>
       <%= f.input :status, label: "<b>Статус (вкл/выкл)</b></br>После включения появится счет на оплату".html_safe, wrapper: :horizontal_collection, wrapper_html: {class: 'mt-4'}  %>
       <%= f.input :title, as: :hidden, input_html: { value: FavoriteSetup::TITLE } %>
       <%= f.input :handle, as: :hidden, input_html: { value: FavoriteSetup::HANDLE }  %>
