--- a/app/views/clients/emailizb.js.erb
+++ b/app/views/clients/emailizb.js.erb
@@ -1,2 +1,2 @@
-$("#main-content").prepend('<%= j render partial: "/layouts/messages" %>');
+$("#main-content").prepend('<%= j render partial: "/layouts/notice_messages" %>');
 $(".alert").delay(12000).slideUp(200, function() { $(this).alert('close'); });
