--- a/app/views/templates/_form.html.erb
+++ b/app/views/templates/_form.html.erb
@@ -1,4 +1,4 @@
-<ul class="nav nav-tabs mb-3" id="templateTab" role="tablist">
+<ul class="nav nav-tabs mt-3 mb-3" id="templateTab" role="tablist">
   <li class="nav-item" role="presentation">
     <button class="nav-link active" id="first-tab" data-bs-toggle="tab" data-bs-target="#first-tab-pane" type="button" role="tab" aria-controls="first-tab-pane" aria-selected="true"><%= page_title %></button>
   </li>
