--- a/app/views/dashboard/services.html.erb
+++ b/app/views/dashboard/services.html.erb
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row mt-3">
   <div class="col-12">
       <div class="h2">Наши сервисы</div>
       <table class="table">
