--- a/app/views/payplans/index.html.erb
+++ b/app/views/payplans/index.html.erb
@@ -26,7 +26,7 @@
     </div>
   <% end %>
 </div>
-
+</div>
 
 
 <div class="table-responsive">
@@ -43,7 +43,7 @@
     </tr>
   </thead>
 
-  <tbody>
+  <tbody id="items_table">
     <% @payplans.each do |payplan| %>
       <tr>
         <td><%= payplan.handle %></td>
