--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,5 +1,5 @@
 
-<div class="row">
+<div class="row mt-3">
 <div class="col-12 mb-3">
   (<%= @product.insid %>) <%= @product.title %> - <%= @product.price %>
 </div>
@@ -33,7 +33,7 @@
 </div>
 
 <div class="row">
-<div class="col-3 btn-group mt-5">
+<div class="col-2 btn-group mt-5">
 <%# link_to 'Edit', edit_product_path(@product) , class: 'btn btn-success' %>
 <%= link_to 'Back', products_path, class: 'btn btn-outline-primary' %>
 </div>
