--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row mt-3 mb-3">
   <div class="col-3">
     <h2>Users</h2>
       <small>Всего - <%= User.count %></small>
@@ -19,11 +19,10 @@
 
 <div class="table-responsive">
   <table class="table table-hover table-condensed">
-    <thead class="thead-light">
-      <tr>
+    <thead>
+      <tr class="bg-success">
         <th>ID</th>
         <th>Данные</th>
-        <th>Создан</th>
         <th>Домен Интегр</th>
         <th>Последний вход</th>
         <th>Действует до</th>
