--- a/app/views/payplans/index.html.erb
+++ b/app/views/payplans/index.html.erb
@@ -30,9 +30,9 @@
 
 
 <div class="table-responsive">
-  <table class="table table-hover table-condensed">
-  <thead>
-    <tr class="bg-success">
+  <table class="table table-sm table-hover align-middle table-bordered border-light">
+    <thead class="align-middle">
+      <tr class="bg-success">
       <th>handle</th>
       <th>title</th>
       <th>Description</th>
