--- a/app/views/layouts/_chatwoot.html.erb
+++ b/app/views/layouts/_chatwoot.html.erb
@@ -1,5 +1,6 @@
 
     <script>
+      window.chatwootSettings = {"position":"right","type":"expanded_bubble","launcherTitle":"Служба поддержки"};
       (function(d,t) {
         var BASE_URL="https://chat.irband.ru";
         var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
@@ -15,4 +16,5 @@
         }
       })(document,"script");
     </script>
+    
     
