--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -1,7 +1,7 @@
 <div class="row align-items-center g-2">
-  <div class="col-3 btn-group mt-5">
+  <div class="col-4 btn-group mt-5">
     <%= link_to 'Назад', clients_path, class: 'btn btn-outline-primary' %>
-    <%= link_to 'Обновить информацию', update_from_insales_path(@client), method: :put, class: 'btn btn-outline-primary' %>
+    <%= link_to 'Обновить данные клиента из инсалес', update_from_insales_path(@client), method: :put, class: 'btn btn-outline-primary' %>
   </div>
 </div>
 <div class="row justify-content-center align-items-center g-2 mt-3">
