--- a/app/views/layouts/_user_navigation.html.erb
+++ b/app/views/layouts/_user_navigation.html.erb
@@ -5,11 +5,11 @@
   <a class="nav-link" href="<%= products_path %>">Товары</a>
 </li>
 <li class="nav-item dropdown">
-  <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-bs-toggle="dropdown">Сообщения</a>
+  <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-bs-toggle="dropdown">Триггеры</a>
   <div class="dropdown-menu">
     <a class="dropdown-item <%= 'active' if current_page?(events_path) %>" href="<%= events_path %>">События</a>
     <a class="dropdown-item <%= 'active' if current_page?(templates_path) %>" href="<%= templates_path %>">Шаблоны</a>
-    <a class="dropdown-item <%= 'active' if current_page?(order_status_changes_path) %>" href="<%= order_status_changes_path %>">Изменения статусов заказов</a>
+    <a class="dropdown-item <%= 'active' if current_page?(order_status_changes_path) %>" href="<%= order_status_changes_path %>">Log Заказы</a>
   </div>
 </li>
 <li class="nav-item dropdown">
