--- a/app/views/dashboard/services_old.html.erb
+++ b/app/views/dashboard/services_old.html.erb
@@ -33,6 +33,25 @@
             <td><%# link_to '<span class="oi oi-trash"></span>'.html_safe, @favorite_setup, method: :delete, data: { confirm: 'Are you sure?' } if @favorite_setup %></td>
           </tr>
 
+          <tr classs="restock_setup">
+            <td><%= RestockSetup::TITLE %></td>
+            <td><%= RestockSetup::DESCRIPTION %></td>
+            <td>
+              <%= link_to 'Добавить', new_restock_setup_path, class: 'btn btn-dark' if !@restock_setup %>
+              <%= link_to 'Добавлен', edit_restock_setup_path(@restock_setup.id), class: 'btn btn-outline-dark disabled', disabled: true if @restock_setup %>
+            </td>
+            <td>
+              <%= link_to 'Настроить', edit_restock_setup_path(@restock_setup.id), class: 'btn btn-dark' if @restock_setup && !@restock_setup.status %>
+              <%= link_to 'Настроено', edit_restock_setup_path(@restock_setup.id), class: 'btn btn-outline-dark' if @restock_setup && @restock_setup.status %>
+            </td>
+            <td>
+              <%= @restock_setup.payplan.title if @restock_setup && @restock_setup.payplan %></br>
+              <%= @restock_setup.status ? "Состояние: Вкл" : "Состояние: Выкл" if @restock_setup %>
+            </td>
+            <td><%= @restock_setup.present? && @restock_setup.valid_until.present? ? @restock_setup.valid_until : "бесплатно" %></td>
+            <td><%# link_to '<span class="oi oi-trash"></span>'.html_safe, @restock_setup, method: :delete, data: { confirm: 'Are you sure?' } if @restock_setup %></td>
+          </tr>
+
           <tr classs="message_setup">
             <td><%= MessageSetup::TITLE %></td>
             <td><%= MessageSetup::DESCRIPTION %></td>
